--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -14,6 +14,7 @@ library(vcd)
 library(forcats)
 library(kableExtra)
 library(ggmap)
+library(ggthemes)
 
 register_google(Sys.getenv("API_TOKEN"))
 
@@ -103,7 +104,8 @@ nyc_arrests_year <- nyc_arrests_combined %>%
 ggplot(data = nyc_arrests_year, aes(x = ARREST_YEAR, y = Number_Arrests)) + geom_col(fill = "black") +
   labs(title = "Arrest Have Been Decreasing Each Year Since 2011",
        x = "Year",
-       y = "Number of Arrests (in Hundred Thousands)")
+       y = "Number of Arrests (in Hundred Thousands)") +
+  theme_grey(14)
 ```
 
 From the plot above, we can see that the number of arrests has decreased each year for the past 10 years. The decrease in arrests is very significant as well since there were over 400,000 arrests in 2011 while there were under 150,000 arrests in 2020 and just over 100,000 arrests so far in 2021. It seems likely that the impact of COVID-19 has helped decrease the number of arrests in 2020 and 2021, especially in 2020 with so many things being shutdown. It will be interesting to see if the number of arrests in 2021 is larger than the 2020 which would be a deviation from the trend of arrests going down. While this plot indicates progress in terms of safety in New York, it will be interesting to see if the number of crimes has dropped significantly as well. If arrests are going down, but crimes are not, then this would indicate that the city is not actually safer, but instead people are getting away with more crimes. We were also interested in looking at the distribution of arrests by month to see if this varied throughout the year. From the plot below, we see that there doesn't seem to be significant variation from month to month in terms of arrests over the past 10 years.
@@ -120,7 +122,9 @@ nyc_arrests_biggest_months <- nyc_arrests_combined %>%
 ggplot(data = nyc_arrests_biggest_months, aes(x = ARREST_MONTH, y = Number_Arrests)) + geom_col(fill = "black") + facet_wrap(~ ARREST_YEAR) +
   labs(title = "Number of Arrests by Month Over Past 10 Years",
        x = "Month",
-       y = "Number of Arrests (in Thousands)")
+       y = "Number of Arrests (in Thousands)") +
+  theme_grey(14) +
+  theme(axis.text=element_text(size=8))
 ```
 
 One small pattern that we can see from this plot is that the number of arrests seems to drop off a little in December, with December 2014 being the most extreme example. The reasoning for this drop off is unclear, but it could potentially be related to the holiday season. It will be interesting to compare to the number of crimes in December to see if people commit fewer crimes at the end of the year. Another aspect of this plot that we found interesting is that the number of arrests really drops off in 2020 once COVID hit. April, June, and July all had very low arrest totals and this was likely due to the fact that most people were quarantining and not going out much. 
@@ -146,7 +150,9 @@ ggplot(data = nyc_arrest_biggest_days, aes(x = Number_Arrests, y = fct_reorder(A
   geom_point() +
   labs(title = "30 Days with Most Arrests Past 10 Years",
        x = "Number of Arrests",
-       y = "Date")
+       y = "Date")  +
+  theme_grey(14) +
+  scale_color_colorblind()
 
 ```
 
@@ -165,7 +171,8 @@ nyc_arrests_type <- nyc_arrests_combined %>%
 ggplot(data = nyc_arrests_type, aes(x = fct_reorder(LAW_CAT_CD, Number_Arrests, .desc = TRUE), y = Number_Arrests)) + 
   geom_col(fill = "black") + labs(title = "Number of Arrests by Arrest Type",
                     x = "Arrest Type",
-                    y = "Number of Arrests (in Millions)")
+                    y = "Number of Arrests (in Millions)") +
+  theme_grey(14)
 ```
 
 From the bar plot above, we can see that misdemeanor is the most common type of arrest in our dataset with over 2 million arrests that were related to misdemeanor charges. Felony is the next most common type of arrest with just under 1 million arrests while violations only account for around 200,000 arrests. There is also a small portion of arrests classified as `I`, which denotes infractions. There were also a small amount of arrests that did not have a `LAW_CAT_CD`, so these were categorized as `NA` in our plot. 
@@ -180,10 +187,13 @@ nyc_coords <- nyc_arrests_categories_simple %>%
             Aggravated.Assault = sum(Aggravated.Assault),
             Motor.Vehicle.Theft = sum(Motor.Vehicle.Theft),
             Robbery = sum(Robbery))
-ggparcoord(data = nyc_coords, columns = 2:6, groupColumn = "County", scale = "globalminmax", splineFactor = 10) +
+ggparcoord(data = nyc_coords, columns = 2:6, groupColumn = "County", scale = "globalminmax", splineFactor = 10,mapping=aes(size = 1)) +
   labs(title = "Parallel Coordinate Plot of Arrest Type by County",
       x = "Arrest Type",
-      y = "Number of Arrests")
+      y = "Number of Arrests") +
+  theme_grey(14) +
+  theme(axis.text=element_text(size=8)) +
+  scale_color_colorblind()
 
 
 ```
@@ -226,7 +236,10 @@ ggplot(crime_vs_arrests_totals2, aes(fill = Category, x = Year, y = Count)) +
   labs(title="Yearly Arrests Compared to Indexed Crimes",
        x="Year",
        y="Number of Arrests (in thousands)"
-       )
+       ) +
+  theme_grey(14) +
+  theme(axis.text=element_text(size=10)) +
+  scale_color_colorblind()
 ```
 
 This reveals a concerning discrepancy. According to our crime reports, indexed crimes have remained stable over the past 10 years. Arrests, however, have decreased steadily over time! This would suggest that police have been making fewer arrests, relative to crime. Many media sources (Ex: https://www.usatoday.com/story/opinion/policing/2021/04/09/violent-crime-surged-across-america-after-police-retreated-column/7137565002/), have suggested this decrease can be attributed to increased police caution following the highly publicized killings of several Black men, starting in 2013, and the rise of the Black Lives Matter Movement. Notably, one of these killings, the 2014 killing of Eric Garner, was the result of NYPD action. Going further, it seems that there were changes in police policy after what seemed to be a retaliatory attack against the NYPD in December of 2014 (https://nypost.com/2014/12/29/arrests-plummet-following-execution-of-two-cops/). It is hard to gauge whether this decline can be solely attributed to this increased police caution, or if part of the decline in arrests was due to an ongoing pattern that extends further back in time. Regardless, it seems apparent that arrests have declined steadily over time, while the crimes included in the UCR's crime index have remained relatively steady.
@@ -247,11 +260,13 @@ ggplot(crime_vs_arrests, aes(fill = Category, y = YearCounty, x = Count)) +
   geom_bar(position="dodge", stat="identity") +
   facet_wrap(vars(Crime), scales = "free") +
   coord_flip() +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
   labs(title="Yearly Arrests By NYC County Compared to Indexed Crimes 2017-2019",
        y="Year and County",
        x="Count"
-       )
+       ) +
+  theme_grey(12) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1,size=10)) +
+  scale_color_colorblind()
 
 ```
 
@@ -308,10 +323,12 @@ ggplot(nyc_mj_arrests_by_date,aes(x=ARREST_DATE,y=COUNT_OF_ARRESTS, color = fct_
   geom_vline(xintercept = make_date(year = 2019,month = 07, day = 29), color = 'red', size = 1.2, alpha = 0.3) +
   geom_vline(xintercept = make_date(year = 2021,month = 03, day = 31), color = 'red', size = 1.2, alpha = 0.3) +
   labs(title="Marijuana Arrests Over Time",
-       x="Month",
+       x="Arrest Date",
        y="Number of Arrests",
        color="Arrest Borough"
-       )
+       ) +
+  theme_grey(14) +
+  scale_color_colorblind()
 ```
 
 There are some very interesting observations here. As can be observed, there was a tremendous drop in marijuana arrests after the launch of Mayor de Blasio's November 19th, 2014 policy initiative. However, this short-term decrease did not last. Though marijuana arrests show a marked decrease after the initiative as compared to before, arrests did see a rebound in 2015. The next largest decline appears to begin around January 2018, though the cause of this decline is not immediately obvious. It may be linked to a more widespread acceptance of marijuana that year, as evident in the commissioning of a study on the legalization of marijuana commissioned by Governor Cuomo that January (https://www.nysenate.gov/newsroom/press-releases/jamaal-t-bailey/marijuana-legalization-impact-assessment-study). Further developments later that year solidify this direction, such as the aforementioned end of prosecution in several boroughs, and the end of arrests for smoking. Unlike the previous decline, this second drop in arrests would not see a rebound, and arrests end entirely after the March 31st, 2021 legalization. The reasons for earlier declines in 2011 and 2012 are not as easy to explain, but it should be noted that 2011 was a high point in marijuana arrests. (https://gothamist.com/news/nyc-still-marijuana-arrest-capital-of-the-world-arrests-rose-again-last-year)
@@ -434,14 +451,20 @@ leg_4 <- route(from = 'Columbus Circle, Manhattan', to = 'Central Park West and 
 
 nyc <- get_map(location = c(-73.982, 40.764), zoom = 14, color = 'bw')
 
-  ggmap(nyc, extent='device', legend='bottom') +
+  ggmap(nyc, extent='device') +
     geom_leg(aes(x = start_lon, y = start_lat, xend = end_lon, yend = end_lat), size = 2, color = 'blue', data=leg_1) +
     geom_leg(aes(x = start_lon, y = start_lat, xend = end_lon, yend = end_lat), size = 2, color = 'blue', data=leg_2) +
     geom_leg(aes(x = start_lon, y = start_lat, xend = end_lon, yend = end_lat), size = 2, color = 'blue', data=leg_3) +
     geom_leg(aes(x = start_lon, y = start_lat, xend = end_lon, yend = end_lat), size = 2, color = 'blue', data=leg_4) +
     geom_jitter(data = nyc_thanksgiving_arrests, aes(x = Longitude, y=Latitude), alpha = 0.2, color = 'red', size = 2, width=0.0005, height=0.0005) +
     facet_wrap(~ THANKSGIVING) +
-    labs(title="Arrest Heatmap - Thanksgivings vs Week Before")
+    labs(title="Arrest Heatmap - Thanksgivings vs Week Before",
+         x="",
+         y="") +
+    theme_grey(14)+
+    theme(axis.line = element_blank(),
+        axis.text = element_blank(),
+        axis.ticks = element_blank())
 
 ```
 
@@ -455,12 +478,13 @@ The results are somewhat unexpected. It may seem intuitive to suspect elevated l
     facet_wrap(~ THANKSGIVING) +
   labs(title = "Fewer Arrests on Thanksgiving?",
        x = "",
-       y = "Number of Arrests")
+       y = "Number of Arrests") +
+  theme_grey(14)
 
 
 ```
 
-## Have Drunk Driving Arrests Gone Down Recently
+## Have Drunk Driving Arrests Gone Down Recently?
 
 Our next exploration is looking at arrests related to drunk driving. We wanted to see if the creation of apps like Uber and Lyft has helped limit the number of drunk driving arrests. To do this, we looked at the number of drunk driving arrests in each of the past 10 years.
 
@@ -478,7 +502,8 @@ ggplot(data = drunk_driving, aes(x = ARREST_YEAR, y = Number_Arrests)) + geom_co
               color="red") +
   labs(title = "Drunk Driving Arrests over Past 10 Years",
        x = "Year",
-       y = "Number of Drunk Driving Arrests")
+       y = "Number of Drunk Driving Arrests") +
+  theme_grey(14)
 
 ```
 
