Minor tweaks to results and conclusion

--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -524,7 +524,7 @@ ggplot(data = drunk_driving, aes(x = ARREST_YEAR, y = Number_Arrests)) + geom_co
 
 From the plot above, we can see an interesting trend in terms of drunk driving arrests over the past 10 years. There is a clear increase in arrests during 2013 and 2014 related to drunk driving before it drops off in subsequent years. There is a sharp drop in number of arrests in 2020 and so far in 2021 which is likely due to the pandemic. As noted on the plot, Lyft was started in 2012 while Uber was created in 2009. These apps didn't seem to have much impact on drunk driving arrests initially, but could have had some impact once they got larger and became more well-known. There has been a progressive decrease in drunk driving arrests since 2015/2016, which could be due to a combination of the growth of these apps and a possible increase in awareness towards drunk driving. Even if the reasoning for the drop off is not completely clear, it seems to be a good sign that the number of drunk driving arrests has gone down in recent years.
 
-There is still one more consideration, however. We have seen previously that arrests have been in decline in general. Is this decline merely a result of a general decline in crime? If we look at the percentage of arrests attributed to drunk driving, relative to all arrests, our conclusion becomes less clear. From this graph, it would seem that drunk driving arrests have not declined significantly relative to arrests in general.
+There is still one more consideration, however. We have seen previously that arrests have been in decline in general. Is this decline merely a result of a general decline in crime? If we look at the percentage of arrests attributed to drunk driving, relative to all arrests, our conclusion becomes less clear. From the graph below, it would seem that drunk driving arrests have not declined significantly relative to arrests in general. Drunk driving arrests have accounted for between 1.5 and 2.5 percent of all arrests in NYC over the past ten years with no clear trends until recently. The plot shows a drop off in 2020 and 2021, but this is again most likely due to the impacts of the pandemic. With fewer people coming in and out of city by car during the pandemic, the portion of drunk driving arrests has fallen to a level similar to what it was back in 2011.
 
 ```{r}
 general_arrests <- nyc_arrests_combined %>%
