--- a/07-conclusion.Rmd
+++ b/07-conclusion.Rmd
@@ -4,7 +4,7 @@ In our project, we were able to explore various aspects of arrest and crime data
 
 ## Analysis Limitations
 
-Though we were able to learn a great deal while constructing this analysis, we also faced some limitations. The first limitation we had was that we had to limit our data to the last 10 years, due to the size of the dataset. This prevented us from being able to look at the impact of the recession on arrests, one of our initial areas of interest. Another limitation presented itself when we were comparing arrests with crime. The crime data we had access to was annual data, and lacked much of the geographic and demographic nuance found in our arrest data. As a result, we were only able to make simple year-to-year comparisons with the arrest data. We were unable to make month-by-month or day-by-day comparisons with the crime data to see if it was similar to some of the results we found with the arrest data, and we could not introduce many additional facets of interest into our analysis. One final nuisance was found in the form of age groups. Our arrest dataset split arrested individuals into 5 different age groups of varying sizes. Though it was good to have any age data at all, it was unfortunate that the data was divided in such an uneven way.
+Though we were able to learn a great deal while constructing this analysis, we also faced some limitations. The first limitation we had was that we had to limit our data to the last 10 years, due to the size of the dataset. This prevented us from being able to look at the impact of the recession on arrests, one of our initial areas of interest. Another limitation presented itself when we were comparing arrests with crime. The crime data we had access to was annual data, and lacked much of the geographic and demographic nuance found in our arrest data. As a result, we were only able to make simple year-to-year comparisons with the arrest data. We were unable to make month-by-month or day-by-day comparisons with the crime data to see if it was similar to some of the results we found with the arrest data, and we could not introduce many additional facets of interest into our analysis. One final nuisance was found in the form of age groups. Our arrest dataset split arrested individuals into 5 different age groups of varying sizes which made it hard to gain any insight from this variable. Though it was good to have any age data at all, it was unfortunate that the data was divided in such an uneven way.
 
 ## Lessons Learned
 
